Dev edition: fix search results alignment
This fixes an issue showing the search results at the right end of the
screen instead of below the search box.

--- a/dev/styles.css
+++ b/dev/styles.css
@@ -405,7 +405,6 @@ header#head .logo {
 #search ol {
   z-index: 1;
   position: absolute;
-  right: 0;
   width: 25em;
   list-style: none;
   background-color: #eee;
